--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
             <nav>
               <ul id="MenuItems">
                 <li><a href="/">ホーム</a></li>
-                <li><a href="">アカウント</a></li>
+    
               </ul>
             </nav>
-              <img src="img/cart.png" width="30px" height="30px">
-              <img src="img/menu.png" class="menu-icon" onclick="menutoggle()">
+            </nav>
           </div>
       </div>
 
