--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="container">
         <h3 class="main-title">市場　11月4日</h3>
         <div class="container2">
-        <img src="/img/person.png" class="moving" alt="" />
+        <img src="person.png" class="moving" alt="" />
         </div>
       </div>
 
@@ -46,42 +46,42 @@
     <div class="row">
         <div class="col-4">
           <a href="product-details.html">
-            <img src="img/product2.jpg">
+            <img src="product2.jpg">
           </a>
             <h4>羽尺2</h4>
             <p>¥0</p>
         </div>
         <div class="col-4">
           <a href="product-details 2.html">
-            <img src="img/product1.jpg">
+            <img src="product1.jpg">
           </a>
             <h4>羽尺1</h4>
             <p>¥0</p>
         </div>
         <div class="col-4">
           <a href="product-details.html">
-            <img src="img/product2.jpg">
+            <img src="product2.jpg">
           </a>
             <h4>羽尺2</h4>
             <p>¥0</p>
         </div>
         <div class="col-4">
           <a href="product-details 2.html">
-            <img src="img/product1.jpg">
+            <img src="product1.jpg">
             </a>
             <h4>羽尺1</h4>
             <p>¥0</p>
         </div>
         <div class="col-4">
           <a href="product-details.html">
-          <img src="img/product2.jpg">
+          <img src="product2.jpg">
           </a>
           <h4>羽尺2</h4>
           <p>¥0</p>
       </div>
       <div class="col-4">
         <a href="product-details 2.html">
-        <img src="img/product1.jpg">
+        <img src="product1.jpg">
       </a>
         <h4>羽尺1</h4>
         <p>¥0</p>
