--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <nav>
               <ul id="MenuItems">
                 <li><a href="/">ホーム</a></li>
-    
               </ul>
             </nav>
-            </nav>
+              <img src="img/menu.png" class="menu-icon" onclick="menutoggle()">
           </div>
       </div>
+ 
 
       <div class="container">
         <h3 class="main-title">市場　11月4日</h3>
