--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="/">ホーム</a></li>
               </ul>
             </nav>
-              <img src="img/menu.png" class="menu-icon" onclick="menutoggle()">
+              <img src="menu.png" class="menu-icon" onclick="menutoggle()">
           </div>
       </div>
  
