--- a/product-details.html
+++ b/product-details.html
@@ -26,7 +26,7 @@
                 <li><a href="/">ホーム</a></li>
               </ul>
             </nav>
-              <img src="menu.png" class="menu-icon" onclick="menutoggle()">
+              <img src="img/menu.png" class="menu-icon" onclick="menutoggle()">
           </div>
       </div>
 
@@ -34,36 +34,40 @@
 <!------ single product ------->
 
 <div class="small-container2 single-product">
-    <div class="row">
+    <div class="row-2">
         <div class="col-2">
-            <img src="product1.jpg" width="100%" id="ProductImg">
+            <img src="img/product1.jpg" width="100%" id="ProductImg">
 
             <div class="small-img-row">
 
               <div class="small-img-col">
-                <img src="product1.jpg" width="100%" class="small-img">
+                <img src="img/product1.jpg" width="100%" class="small-img">
                </div>
               <div class="small-img-col">
-               <img src="product1_1.jpg" width="100%" class="small-img">
+               <img src="img/product1_1.jpg" width= "100%" class="small-img">
               </div>
               <div class="small-img-col">
-                <img src="product1_2.jpg" width="100%" class="small-img">
+                <img src="img/product1_2.jpg" width="100%" class="small-img">
                </div>
                <div class="small-img-col">
-                <img src="product1_3.jpg" width="100%" class="small-img">
+                <img src="img/product1_3.jpg" width="100%" class="small-img">
                </div>
 
             </div>
           </div>
 
-
+          <div class="small-container3 description-product">
+            <div class="row-2">
             <div class="col-2">
                 <p>商品/羽尺</p>
                 <h1>羽尺2</h1>
                 <h4>¥0</h4>
+              <input type="number" value="1">
+              <a href="" class="btn"> 追加</a>
               <h3>商品説明</h3>
               <p>ここに商品の説明を書く.....</p>
-
+            </div>
+            </div>
             </div>
         </div>
 
@@ -77,21 +81,21 @@
   <div class="row">
       <div class="col-4">
         <a href="product-details.html">
-          <img src="product2.jpg">
+          <img src="img/product2.jpg">
         </a>
           <h4>羽尺2</h4>
           <p>¥0</p>
       </div>
       <div class="col-4">
         <a href="product-details 2.html">
-          <img src="product1.jpg">
+          <img src="img/product1.jpg">
           </a>
           <h4>羽尺1</h4>
           <p>¥0</p>
       </div>
       <div class="col-4">
         <a href="product-details.html">
-          <img src="product2.jpg">
+          <img src="img/product2.jpg">
         </a>
           <h4>羽尺2</h4>
           <p>¥0</p>
