--- a/product-details 2.html
+++ b/product-details 2.html
@@ -26,7 +26,7 @@
                 <li><a href="/">ホーム</a></li>
               </ul>
             </nav>
-              <img src="img/menu.png" class="menu-icon" onclick="menutoggle()">
+              <img src="menu.png" class="menu-icon" onclick="menutoggle()">
           </div>
       </div>
 
@@ -36,21 +36,21 @@
 <div class="small-container2 single-product">
     <div class="row">
         <div class="col-2">
-            <img src="img/product1.jpg" width="100%" id="ProductImg">
+            <img src="product1.jpg" width="100%" id="ProductImg">
 
             <div class="small-img-row">
 
               <div class="small-img-col">
-                <img src="img/product1.jpg" width="100%" class="small-img">
+                <img src="product1.jpg" width="100%" class="small-img">
                </div>
               <div class="small-img-col">
-               <img src="img/product1_1.jpg" width="100%" class="small-img">
+               <img src="product1_1.jpg" width="100%" class="small-img">
               </div>
               <div class="small-img-col">
-                <img src="img/product1_2.jpg" width="100%" class="small-img">
+                <img src="product1_2.jpg" width="100%" class="small-img">
                </div>
                <div class="small-img-col">
-                <img src="img/product1_3.jpg" width="100%" class="small-img">
+                <img src="product1_3.jpg" width="100%" class="small-img">
                </div>
 
             </div>
@@ -79,21 +79,21 @@
     <div class="row">
         <div class="col-4">
           <a href="product-details.html">
-            <img src="img/product2.jpg">
+            <img src="product2.jpg">
           </a>
             <h4>羽尺2</h4>
             <p>¥0</p>
         </div>
         <div class="col-4">
           <a href="product-details 2.html">
-            <img src="img/product1.jpg">
+            <img src="product1.jpg">
             </a>
             <h4>羽尺1</h4>
             <p>¥0</p>
         </div>
         <div class="col-4">
           <a href="product-details.html">
-            <img src="img/product2.jpg">
+            <img src="product2.jpg">
           </a>
             <h4>羽尺2</h4>
             <p>¥0</p>
